<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Planks</string>
    
    <string name="zero">0</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_start">Start</string>
    <string name="action_skip">Skip</string>
    
    <string name="title_activity_planks">Planks</string>
    <string name="title_activity_settings">Settings</string>
    
	<string name="timer_default">00:0</string>
	
	<string name="counter_of"> of </string>
	
	<string name="settings_break">Break time</string>
	<string name="settings_reset">Reset</string>
	<string name="settings_save">Save and exit</string>
	
	<string name="plank_0">Plank 0</string>
	<string name="plank_1">Plank 1</string>
	<string name="plank_2">Plank 2</string>
	<string name="plank_3">Plank 3</string>
	<string name="plank_4">Plank 4</string>
	<string name="plank_5">Plank 5</string>
	
</resources>
