<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlanksActivity" >

    <TextView 
        android:id="@+id/timerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:textSize="50sp"
        android:text="@string/timer_default"/>
    
    <TextView 
        android:id="@+id/timerRevText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@id/timerText"
        android:layout_centerHorizontal="true"
        android:text="@string/timer_default"/>
    
    <LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true">
	    
	    <TextView
	        android:id="@+id/countCurrent"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/zero" />
	    
	    <TextView
	        android:id="@+id/countOf"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="2dp"
	        android:layout_marginRight="2dp"
	        android:text="@string/counter_of" />
	    
	    <TextView
	        android:id="@+id/countTotal"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/zero" />
        
    </LinearLayout>
    
    <TextView 
	    android:id="@+id/breakTimer"
	    android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:background="#fff"
        android:visibility="gone"
        android:alpha="0.85"
        android:textSize="200sp"
        android:clickable="true"
        android:onClick="breakClicked"
        android:text="@string/zero" />
    
</RelativeLayout>
